# ariadne-graphql-chat-example

./: Dockerfile  LICENSE  README.md  docker-compose.yml
python-server/: pyproject.toml  schema.graphql  server.py
react-client/: index.html  package-lock.json  package.json  vite.config.js
react-client/public/: index.html
react-client/src/: App.js  ChatScreen.js  LoginScreen.jsx  index.css  index.js  main.jsx  setupProxy.js  useHistoryQuery.js  useMessageSubscription.js  useReplyMutation.js
