[project]
name = "ariadne-graphql-chat-example"
description = "Example Chat build with Ariadne using GraphQL Subscriptions"
version = "0.1.0"
authors = [{ name = "Mirumee Software", email = "hello@mirumee.com" }]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "ariadne>=0.16",
  "uvicorn[standard]",
  "broadcaster[redis]",
]

[project.urls]
Home = "https://ariadnegraphql.org"
Source = "https://github.com/mirumee/ariadne-graphql-chat-example"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'